# Axoimhub

./: .dockerignore  .env.example  .env.production.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: AUTHENTICATION_AUTHORIZATION.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  assets.py  auth.py  health.py  internal.py  jobs.py  projects.py  router.py  templates.py
backend/app/core/: __init__.py  auth_config.py  authorization.py  config.py  dependencies.py  exceptions.py  logging.py  prompt_templates.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  asset.py  job.py  project.py  user.py
backend/app/schemas/: __init__.py  asset.py  auth.py  common.py  job.py  project.py
backend/app/services/: __init__.py  asset_service.py  job_service.py  project_service.py  prompt_enhancer.py
backend/app/utils/: __init__.py  job_limiter.py  prompt_sanitizer.py
backend/migrations/: .gitkeep  env.py
backend/migrations/versions/: 20260202_0000_001_initial_initial_schema.py
docker/backend/: Dockerfile
docker/comfyui/: Dockerfile
docker/frontend/: Dockerfile
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/dashboards/json/: axiom-overview.json
docker/grafana/provisioning/datasources/: datasources.yml
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docker/worker-cpu/: Dockerfile
docker/worker-gpu/: Dockerfile
docs/: deployment.md  workflow.md
docs/deployment/: .gitkeep
frontend/: FRONTEND_ARCHITECTURE.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: .gitkeep
frontend/src/app/: .gitkeep  global-error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/assets/: page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/generate/: page.tsx
frontend/src/app/(dashboard)/generate/3d/: page.tsx
frontend/src/app/(dashboard)/generate/image/: page.tsx
frontend/src/app/(dashboard)/generate/video/: page.tsx
frontend/src/app/(dashboard)/history/: page.tsx
frontend/src/app/(dashboard)/projects/: page.tsx
frontend/src/app/(dashboard)/projects/[id]/: page.tsx
frontend/src/app/(dashboard)/settings/: layout.tsx  page.tsx
frontend/src/components/: .gitkeep  index.ts  providers.tsx
frontend/src/components/generation/: asset-gallery.tsx  index.ts  job-status-panel.tsx  prompt-editor.tsx
frontend/src/components/layout/: footer.tsx  header.tsx  index.ts  sidebar.tsx
frontend/src/components/three/: index.ts  model-viewer-canvas.tsx  model-viewer.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  index.ts  input.tsx  label.tsx  progress.tsx  select.tsx  skeleton.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx
frontend/src/hooks/: .gitkeep  index.ts  use-assets.ts  use-auth.ts  use-jobs.ts
frontend/src/services/: .gitkeep
frontend/src/store/: assets-store.ts  auth-store.ts  index.ts  jobs-store.ts  ui-store.ts
frontend/src/stores/: .gitkeep
frontend/src/styles/: globals.css
frontend/src/types/: .gitkeep  index.ts
infrastructure/compose/: .gitkeep
infrastructure/docker/: .gitkeep
infrastructure/kubernetes/: .gitkeep
k8s/base/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  postgres-statefulset.yaml  redis-deployment.yaml  secrets.yaml  storage.yaml  worker-cpu-deployment.yaml  worker-gpu-deployment.yaml
k8s/overlays/production/: ingress-patch.yaml  kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
orchestration/: pyproject.toml
orchestration/adapters/: __init__.py  workflow_adapter.py
orchestration/client/: __init__.py  comfyui_client.py
orchestration/workflows/: .gitkeep  __init__.py  sdxl_img2img.json  sdxl_txt2img.json  svd_img2vid.json  triposr_img2mesh.json  triposr_txt2mesh.json
scripts/: build-docker.sh  deploy-k8s.sh  dev-setup.sh  dev.sh  health-check.sh  setup-comfyui-custom-nodes.sh  setup-comfyui-models.sh  setup.sh  test.sh
shared/constants/: __init__.py
shared/types/: __init__.py
storage/: __init__.py
storage/adapters/: __init__.py
storage/utils/: __init__.py
workers/: __init__.py  celery_app.py  cli.py  config.py  dispatcher.py  pyproject.toml
workers/handlers/: __init__.py  cloud.py  comfyui.py  native.py
workers/tasks/: __init__.py  base.py  callbacks.py  image.py  model3d.py  video.py
workers/utils/: __init__.py  gpu.py  logging.py  metrics.py  storage.py
