[project]
name = "axiom-orchestration"
version = "0.1.0"
description = "Axiom Design Engine - ComfyUI Orchestration Layer"
requires-python = ">=3.11"
dependencies = [
    # HTTP Client
    "httpx>=0.26.0",
    "websockets>=12.0",
    
    # Validation
    "pydantic>=2.5.3",
    
    # Utilities
    "orjson>=3.9.10",
    "aiofiles>=23.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
